# gpui-table

./: .gitattributes  .gitignore  .typos.toml  AGENTS.md  CLAUDE.md  Cargo.toml  Justfile  README.md  justfile
.cargo/: config.toml
.github/workflows/: ci.yml
crates/gpui-table/: Cargo.toml  README.md
crates/gpui-table-component/: Cargo.toml  README.md
crates/gpui-table-component/docs/: ARCHITECTURE.md
crates/gpui-table-component/i18n/en/: gpui-table-component.ftl
crates/gpui-table-component/i18n/fr-FR/: gpui-table-component.ftl
crates/gpui-table-component/i18n/zh-CN/: gpui-table-component.ftl
crates/gpui-table-component/src/: date_range_filter.rs  faceted_filter.rs  lib.rs  main.rs  number_range_filter.rs  reset_filters.rs  table_status_bar.rs  text_filter.rs
crates/gpui-table-component/src/stories/: date_range_filter_story.rs  faceted_filter_story.rs  mod.rs  number_range_filter_story.rs  reset_filters_story.rs  table_status_bar_story.rs  text_filter_story.rs
crates/gpui-table-components/: Cargo.toml
crates/gpui-table-components/src/: date_range_filter.rs  faceted_filter.rs  lib.rs  main.rs  number_range_filter.rs  table_status_bar.rs  text_filter.rs
crates/gpui-table-core/: Cargo.toml  README.md
crates/gpui-table-core/docs/: ARCHITECTURE.md
crates/gpui-table-core/i18n/en/: gpui-table-core.ftl
crates/gpui-table-core/i18n/fr-FR/: gpui-table-core.ftl
crates/gpui-table-core/i18n/zh-CN/: gpui-table-core.ftl
crates/gpui-table-core/src/: filter.rs  filter_helpers.rs  lib.rs  registry.rs
crates/gpui-table-core/src/filter/: config.rs  convert.rs  mod.rs  traits.rs  value.rs  wrappers.rs
crates/gpui-table-derive/: Cargo.toml  README.md
crates/gpui-table-derive/docs/: ARCHITECTURE.md
crates/gpui-table-derive/src/: components.rs  impl_attr.rs  lib.rs
crates/gpui-table-derive/src/__crate_paths/: gpui.rs  gpui_component.rs  mod.rs
crates/gpui-table-prototyping-core/: Cargo.toml  README.md
crates/gpui-table-prototyping-core/docs/: ARCHITECTURE.md
crates/gpui-table-prototyping-core/src/: code_gen.rs  column.rs  lib.rs
crates/gpui-table/docs/: ARCHITECTURE.md
crates/gpui-table/src/: lib.rs
crates/gpui-table/tests/: filter_tests.rs  table_rendering_snapshots.rs
crates/gpui-table/tests/snapshots/: table_rendering_snapshots__basic_table_rendering.snap  table_rendering_snapshots__styled_table_rendering.snap
example/: Cargo.toml  build.rs
example/i18n/en/: gpui-storybook-example.ftl
example/i18n/fr/: gpui-storybook-example.ftl
example/i18n/zh-CN/: gpui-storybook-example.ftl
example/src/: lib.rs
example/src/stories/: hello.rs  hello2.rs  mod.rs
examples/: README.md  justfile
examples/i18n/en/: some-lib.ftl
examples/i18n/fr/: some-lib.ftl
examples/i18n/fr-FR/: some-lib.ftl
examples/i18n/zh-CN/: some-lib.ftl
examples/prototyping/: Cargo.toml
examples/prototyping/output/: filter_showcase.rs  infinite_row.rs  item.rs  product.rs  user.rs
examples/prototyping/src/: main.rs
examples/seaorm-migration/: Cargo.toml
examples/seaorm-migration/src/: lib.rs  m20241228_000001_create_orders.rs  main.rs
examples/some-lib/: .expanded.rs  Cargo.toml  build.rs
examples/some-lib-table/: Cargo.toml
examples/some-lib-table/src/: main.rs
examples/some-lib-table/src/stories/: user.rs
examples/some-lib-tables/: Cargo.toml  build.rs
examples/some-lib-tables/src/: main.rs
examples/some-lib-tables/src/tables/: filter_showcase.rs  fruit.rs  infinite_row.rs  infinite_scroll.rs  item.rs  mod.rs  pokemon.rs  product.rs  seaorm_order.rs  spacetimedb_player.rs  user.rs
examples/some-lib/src/: fruit.rs  lib.rs  user.rs  user_custom.rs
examples/some-lib/src/structs/: enums.rs  filter_showcase.rs  fruit.rs  infinite_row.rs  infinite_scroll.rs  item.rs  mod.rs  pokemon.rs  product.rs  seaorm_order.rs  spacetimedb_player.rs  user.rs
examples/spacetimedb-server/: Cargo.toml
examples/spacetimedb-server/src/: lib.rs
