[workspace]
default-members = [ "examples/some-lib-tables" ]
members = [
  "crates/gpui-table",
  "crates/gpui-table-components",
  "crates/gpui-table-core",
  "crates/gpui-table-derive",
  "crates/gpui-table-prototyping-core",
  "examples/prototyping",
  "examples/some-lib",
  "examples/some-lib-tables",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
publish = true
readme = "README.md"
repository = "https://github.com/stayhydated/gpui-table"
rust-version = "1.88"
version = "0.5.0"

[workspace.dependencies]
toasty = { git = "https://github.com/tokio-rs/toasty", features = ["postgresql", "rust_decimal"] }
anyhow = "1.0.96"
automod = "1.0.15"
bon = "3.3.2"
chrono = "0.4.40"
crabtime = "1.1.3"
crate-paths = "0.1.0"
darling = "0.21.3"
derive_more = "2.0.1"
dotenv = "0.15.0"
env_logger = "0.11"
es-fluent = "0.4.2"
es-fluent-lang = "0.4.2"
es-fluent-manager-embedded = "0.4.2"
fake = "4.4.0"
fluent-bundle = "0.15.3"
futures = "0.3.31"
gpui = { git = "https://github.com/zed-industries/zed" }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
gpui-storybook = { branch = "git", git = "https://github.com/stayhydated/gpui-storybook" }
gpui-table = { path = "crates/gpui-table", version = "0.5.0" }
gpui-table-components = { path = "crates/gpui-table-components", version = "0.5.0" }
gpui-table-core = { path = "crates/gpui-table-core", version = "0.5.0" }
gpui-table-derive = { path = "crates/gpui-table-derive", version = "0.5.0" }
gpui-table-prototyping-core = { path = "crates/gpui-table-prototyping-core", version = "0.5.0" }
gpui_tokio = { git = "https://github.com/zed-industries/zed" }
heck = "0.5.0"
insta = { version = "1.43.2" }
inventory = "0.3.20"
itertools = "0.14.0"
log = "0.4.26"
once_cell = "1.21.3"
paste = "1.0.15"
prettyplease = "0.2.34"
proc-macro-error2 = "2.0"
proc-macro2 = "1.0.93"
quote = "1.0.38"
rayon = "1.10.0"
regex = "1.11.1"
reqwest_client = { git = "https://github.com/longbridge/gpui-component" }
rust-embed = "8.6.0"
rust_decimal = "1.36.0"
serde = "1.0.219"
serde_json = "1.0.140"
strum = "0.27.1"
syn = "2.0.98"
thiserror = "2.0.11"
tokio = "1.43.0"
tracing-subscriber = "0.3.19"
unicode-segmentation = "1.12.0"
uuid = "1.18.1"

[workspace.lints.rust]
unexpected_cfgs = { level = "deny" }

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
type_complexity = "allow"
uninlined_format_args = "allow"
unused_trait_names = "warn"

[profile.dev]
codegen-units = 16
debug = "limited"
opt-level = 1
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
