[workspace]
default-members = ["examples/some-lib-tables"]
members = [
  "crates/gpui-table",
  "crates/gpui-table-component",
  "crates/gpui-table-core",
  "crates/gpui-table-derive",
  "crates/gpui-table-prototyping-core",
  "examples/prototyping",
  "examples/some-lib",
  "examples/some-lib-tables",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
publish = true
readme = "README.md"
repository = "https://github.com/stayhydated/gpui-table"
rust-version = "1.88"
version = "0.5.0"

[workspace.dependencies]
anyhow = "1.0"
automod = "1.0"
bon = "3.8"
chrono = "0.4"
crabtime = "1.1"
crate-paths = "0.2"
darling = "0.23"
derive_more = "2.1"
dotenv = "0.15"
env_logger = "0.11"
es-fluent = "0.8"
es-fluent-lang = "0.8"
es-fluent-manager-embedded = "0.8"
fake = "4.4"
fluent-bundle = "0.16"
futures = "0.3"
gpui = { git = "https://github.com/zed-industries/zed" }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
gpui-storybook = { git = "https://github.com/stayhydated/gpui-storybook" }
gpui-table = { path = "crates/gpui-table", version = "0.5.0" }
gpui-table-component = { path = "crates/gpui-table-component", version = "0.5.0" }
gpui-table-core = { path = "crates/gpui-table-core", version = "0.5.0" }
gpui-table-derive = { path = "crates/gpui-table-derive", version = "0.5.0" }
gpui-table-prototyping-core = { path = "crates/gpui-table-prototyping-core", version = "0.5.0" }
gpui_tokio = { git = "https://github.com/zed-industries/zed" }
heck = "0.5.0"
insta = { version = "1.46" }
inventory = "0.3"
itertools = "0.14"
log = "0.4"
once_cell = "1.21"
paste = "1.0"
prettyplease = "0.2"
proc-macro-error2 = "2.0"
proc-macro2 = "1.0"
quote = "1.0"
rayon = "1.11"
regex = "1.12"
reqwest = "0.13"
reqwest_client = { git = "https://github.com/longbridge/gpui-component" }
rust-embed = "8.11"
rust_decimal = "1.40"
serde = "1.0"
serde_json = "1.0"
strum = "0.27"
syn = "2.0"
thiserror = "2.0"
tokio = "1.49"
tracing-subscriber = "0.3"
unicode-segmentation = "1.12"
urlencoding = "2.1"
uuid = "1.19"

[workspace.lints.rust]
unexpected_cfgs = { level = "deny" }

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
type_complexity = "allow"
uninlined_format_args = "allow"
unused_trait_names = "warn"

[profile.dev]
codegen-units = 16
debug = "limited"
opt-level = 1
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
