[package]
name = "gpui-table-example"
version.workspace = true
edition.workspace = true
license = "Unlicense"
publish = false

[dependencies]
es-fluent = { workspace = true }
es-fluent-lang = { workspace = true }
es-fluent-manager-embedded = { workspace = true }
gpui = { workspace = true }
gpui-component = { workspace = true }
gpui-table = { workspace = true }
rust-embed = { workspace = true }
strum = { workspace = true }

[build-dependencies]
es-fluent-build = { workspace = true }
log = { workspace = true }

[lints]
workspace = true
