[package]
name = "gpui-table-component"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
chrono = { features = ["serde"], workspace = true }
es-fluent = { features = ["derive"], workspace = true }
es-fluent-lang = { workspace = true }
es-fluent-manager-embedded = { workspace = true }
gpui = { workspace = true }
gpui-component = { workspace = true }
gpui-storybook = { workspace = true }
gpui-table-core = { features = ["fluent"], workspace = true }
rust_decimal = { workspace = true }
rust-embed = { workspace = true }
strum = { features = ["derive"], workspace = true }

[build-dependencies]
es-fluent = { features = ["build"], workspace = true }

[lints]
workspace = true
