[package]
name = "gpui-table-components"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
gpui = { workspace = true }
gpui-table-core = { workspace = true }
gpui-component = { workspace = true }
chrono = {workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
strum = { workspace = true, features = ["derive"] }
