[package]
name = "gpui-table-core"
description = """
Core crate for gpui-table
"""
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true
repository.workspace = true
readme.workspace = true

[features]
default = [ "chrono" ]
chrono = [ "dep:chrono" ]
fluent = [ "dep:es-fluent" ]
jiff = [ "dep:jiff" ]
rust_decimal = [ "dep:rust_decimal" ]

[dependencies]
anyhow = { workspace = true }
chrono = { optional = true, workspace = true }
derive_more = { features = [ "full" ], workspace = true }
es-fluent = { optional = true, workspace = true }
gpui = { workspace = true }
gpui-component = { workspace = true }
inventory = { workspace = true }
jiff = { optional = true, workspace = true }
paste = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
rust-embed = { workspace = true }
rust_decimal = { optional = true, workspace = true }
serde = { features = [ "derive" ], workspace = true }
serde_json = { workspace = true }
strum = { features = [ "derive" ], workspace = true }
tracing-subscriber = { features = [ "env-filter" ], workspace = true }

[lints]
workspace = true

