[package]
name = "gpui-table-core"
description = """
Core crate for gpui-table
"""
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
readme = "README.md"

[features]
chrono = ["dep:chrono"]
default = ["chrono"]
fluent = ["dep:es-fluent", "dep:es-fluent-manager-embedded", "dep:rust-embed", "es-fluent/derive"]
rust_decimal = ["dep:rust_decimal"]

[dependencies]
chrono = { optional = true, workspace = true }
derive_more = { features = ["full"], workspace = true }
es-fluent = { optional = true, workspace = true }
es-fluent-manager-embedded = { optional = true, workspace = true }
gpui = { workspace = true }
gpui-component = { workspace = true }
inventory = { workspace = true }
rust_decimal = { optional = true, workspace = true }
rust-embed = { optional = true, workspace = true }
strum = { features = ["derive"], workspace = true }

[build-dependencies]
es-fluent = { features = ["build"], workspace = true }

[lints]
workspace = true
