[package]
name = "gpui-table-derive"
description = """
Derive crate for gpui-table
"""
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true
repository.workspace = true
readme.workspace = true

[lib]
proc-macro = true

[features]
fluent = [  ]

[dependencies]
crate-paths = { workspace = true }
darling = { workspace = true }
gpui-table-core = { workspace = true }
heck = { workspace = true }
inventory = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { features = [ "full" ], workspace = true }

[lints]
workspace = true
