[package]
name = "gpui-table-derive"
description = """
Derive crate for gpui-table
"""
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
readme = "README.md"

[lib]
proc-macro = true

[features]
fluent = [  ]
inventory = [  ]

[dependencies]
crate-paths = { workspace = true }
darling = { workspace = true }
heck = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { features = [ "full" ], workspace = true }

[lints]
workspace = true
