[package]
name = "gpui-table-prototyping-core"
description = """
Consumer-facing prototyping utilities for gpui-table.
"""
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
gpui-table-core = { workspace = true }
heck = { workspace = true }
inventory = { workspace = true }
prettyplease = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { features = [ "full", "parsing" ], workspace = true }

[lints]
workspace = true
