[package]
name = "gpui-table"
description = """
The gpui-table crate
"""
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true
repository.workspace = true
readme.workspace = true

[features]
default = [ "derive", "chrono" ]
chrono = [ "gpui-table-core/chrono" ]
derive = [ "dep:gpui-table-derive" ]
fluent = [ "gpui-table-core/fluent", "gpui-table-derive/fluent" ]
rust_decimal = [ "gpui-table-core/rust_decimal" ]

[dependencies]
anyhow = { workspace = true }
derive-new = { workspace = true }
es-fluent = { optional = true, workspace = true }
gpui = { workspace = true }
gpui-component = { workspace = true }
gpui-table-core = { workspace = true }
gpui-table-derive = { optional = true, workspace = true }
inventory = { workspace = true }
rust-embed = { workspace = true }
serde = { features = [ "derive" ], workspace = true }
serde_json = { workspace = true }
tracing-subscriber = { features = [ "env-filter" ], workspace = true }

[lints]
workspace = true
