[package]
name = "gpui-table"
description = """
The gpui-table crate
"""
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
readme = "README.md"

[features]
chrono = [ "gpui-table-core/chrono" ]
component = [  ]
default = [ "derive", "chrono" ]
derive = [ "dep:gpui-table-derive" ]
fluent = [ "gpui-table-core/fluent", "gpui-table-derive/fluent" ]
inventory = [ "gpui-table-derive/inventory" ]
rust_decimal = [ "gpui-table-core/rust_decimal" ]

[dependencies]
gpui = { workspace = true }
gpui-component = { workspace = true }
gpui-table-component = { workspace = true }
gpui-table-core = { workspace = true }
gpui-table-derive = { optional = true, workspace = true }
serde = { features = [ "derive" ], workspace = true }

[dev-dependencies]
insta = { features = [ "yaml" ], workspace = true }
strum = { features = [ "derive" ], workspace = true }

[lints]
workspace = true
