[package]
name = "prototyping"
version = "0.1.0"
edition.workspace = true
license = "Unlicense"
publish = false

[dependencies]
gpui-table = { features = [ "inventory", "fluent", "rust_decimal", "chrono" ], workspace = true }
gpui-table-components = { workspace = true }
gpui-table-prototyping-core = { workspace = true }
heck = { workspace = true }
inventory = { workspace = true }
prettyplease = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
some-lib = { path = "../some-lib" }
syn = { features = [ "full", "parsing" ], workspace = true }

[lints]
workspace = true
