[package]
name = "some-lib-tables"
version = "0.1.0"
edition.workspace = true
license = "Unlicense"
publish = false

[dependencies]
chrono = { workspace = true }
es-fluent = { workspace = true }
es-fluent-lang = { workspace = true }
es-fluent-manager-embedded = { workspace = true }
fake = { workspace = true }
gpui = { workspace = true }
gpui-component = { workspace = true }
gpui-table-components = { workspace = true }
gpui-table = { workspace = true }
gpui-storybook = { features = [ "macros" ], workspace = true }
inventory = { workspace = true }
rust-embed = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
some-lib = { path = "../some-lib" }
strum = { workspace = true }

[build-dependencies]
es-fluent-build = { workspace = true }

[lints]
workspace = true
