[package]
name = "some-lib"
version = "0.1.0"
edition.workspace = true
license = "Unlicense"
publish = false

[dependencies]
chrono = { workspace = true }
es-fluent = { features = [ "derive" ], workspace = true }
es-fluent-manager-embedded = { workspace = true }
fake = { features = [
  "derive",
  "uuid",
  "random_color",
  "chrono",
  "rust_decimal",
], workspace = true }
gpui = { workspace = true }
gpui-component = { workspace = true }
gpui-table = { features = [ "fluent", "inventory", "rust_decimal", "chrono" ], workspace = true }
gpui_tokio = { workspace = true }
heck = { workspace = true }
log = { workspace = true }
reqwest = { features = [ "json" ], version = "0.12" }
rust-embed = { workspace = true }
rust_decimal = { workspace = true }
sea-orm = { features = [ "runtime-tokio-rustls", "sqlx-postgres" ], workspace = true }
serde = { features = [ "derive" ], workspace = true }
spacetimedb = { workspace = true }
strum = { features = [ "derive" ], workspace = true }
urlencoding = "2"
uuid = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
