[package]
name = "some-lib"
version = "0.1.0"
edition.workspace = true
license = "Unlicense"
publish = false

[dependencies]
chrono = { workspace = true }
es-fluent = { features = [ "derive" ], workspace = true }
es-fluent-manager-embedded = { workspace = true }
fake = { features = [
  "derive",
  "uuid",
  "random_color",
  "chrono",
  "rust_decimal",
], workspace = true }
gpui = { workspace = true }
gpui-component = { workspace = true }
gpui-table = { features = [
  "fluent",
  "inventory",
  "rust_decimal",
  "chrono",
  "component",
], workspace = true }
gpui_tokio = { workspace = true }
heck = { workspace = true }
log = { workspace = true }
reqwest = { features = [ "json" ], workspace = true }
rust-embed = { workspace = true }
rust_decimal = { workspace = true }
serde = { features = [ "derive" ], workspace = true }
strum = { features = [ "derive" ], workspace = true }
tokio = { workspace = true }
urlencoding = { workspace = true }
uuid = { workspace = true }
